# gRPC

./: CMakeLists.txt  README.md  lan1.xml  lan2.xml
api/: web_server.py
client/: dictionary_pb2.py  dictionary_pb2_grpc.py  main_client.py
proto/: dictionary.proto
server/: main.cpp
web_client/: index.html
